--- a/employeemcrud/src/main/resources/application.properties
+++ b/employeemcrud/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=employeemcrud
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/cjcuser
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
